--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,16 @@ services:
     container_name: pgadmin4
     image: dpage/pgadmin4
     restart: always
+    depends_on:
+      - db
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
+      - PGADMIN_SERVER_JSON_FILE=/pgadmin4/servers.json
     ports:
       - 5050:80
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
 
   backend:
     container_name: backend
@@ -49,4 +54,10 @@ volumes:
     driver_opts:
       type: none
       device: database
+      o: bind
+  pgadmin-data:
+    driver: local
+    driver_opts:
+      type: none
+      device: pgadmin_data
       o: bind
