all containers should be ready for dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
     build:
       context: frontend
       dockerfile: Dockerfile
+    restart: always
     ports:
       - 3000:3000
+    volumes: 
+      - frontend-dev:/app
 
   db:
     container_name: database
