--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,14 +8,10 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code to the working directory
 COPY . .
 
 # Build the Next.js app for production
 RUN npm run build
 
-# Expose port 3000 to the outside world
-EXPOSE 3000
-
 # Define the command to run your Next.js app
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
