--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.7.0",
     "react": "^18",
     "react-dom": "^18"
   },
