--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,4 @@ FROM python:3.13.0a3-bookworm
 
 WORKDIR /backend
 
-RUN python -m pip install Django
-
-RUN pip install psycopg
+RUN pip install -r requirements.txt
