--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "next-auth": "^4.24.5",
     "next-intl": "^3.7.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.161.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
