--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.13.0a3-bookworm
-
-WORKDIR /backend
-
-RUN pip install -r requirements.txt
-
-COPY . .
+ENV PYTHONUNBUFFERED 1
+WORKDIR /app
+COPY requirements.txt /app/requirements.txt
+RUN pip install -r /app/requirements.txt
+COPY . /app
+CMD python manage.py runserver 0.0.0.0:8000
