--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,31 +12,17 @@ services:
   #   volumes: 
   #     - frontend-dev:/app
 
-  db:
-    container_name: database
-    image: postgres:latest
-    restart: always
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=postgres
+  # db:
+  #   container_name: database
+  #   image: postgres:latest
+  #   restart: always
+  #   ports:
+  #     - 5432:5432
+  #   environment:
+  #     - POSTGRES_USER=root
+  #     - POSTGRES_PASSWORD=root
+  #     - POSTGRES_DB=postgres
 
-  pgadmin:
-    container_name: pgadmin4
-    image: dpage/pgadmin4
-    restart: always
-    depends_on:
-      - db
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=root
-      - PGADMIN_SERVER_JSON_FILE=/pgadmin4/servers.json
-    ports:
-      - 5050:80
-    volumes:
-      - ./servers.json:/pgadmin4/servers.json 
 
   # backend:
   #   container_name: backend
