--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-intl": "^3.7.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
+    "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18"
   },
   "devDependencies": {
