--- a/backend/authentication/Dockerfile
+++ b/backend/authentication/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.13.0a3-bookworm
-ENV PYTHONUNBUFFERED 1
+# ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install -r /app/requirements.txt
