--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     restart: always
+    depends_on: 
+      - backend
     ports:
       - 3000:3000
     volumes: 
