--- a/backend/authentication/Dockerfile
+++ b/backend/authentication/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.13.0a3-bookworm
-# ENV PYTHONUNBUFFERED 1
+FROM python:3.12-alpine3.19
+
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
-RUN pip install -r /app/requirements.txt
+RUN pip install -r requirements.txt
 COPY . /app
-CMD python manage.py runserver 0.0.0.0:8000
+ENTRYPOINT [ "sh", "script.sh" ]
