--- a/backend/authentication/.env.example
+++ b/backend/authentication/.env.example
@@ -1,2 +1,12 @@
-#enter the command inside the container backend
-TOKEN_SIGNING_KEY=(python -c "import secrets; print(secrets.token_urlsafe(32))")
+DJANGO_SECRET=your_long_secret
+TOKEN_SIGNING_KEY=your_signing_key_without_double_quotes
+
+DJANGO_SUPERUSER_PASSWORD=root
+DJANGO_SUPERUSER_EMAIL=example@example.com
+DJANGO_SUPERUSER_USERNAME=admin
+
+DB_NAME=postgres
+DB_HOST=database
+DB_PORT=5432
+DB_USER=root
+DB_PASSWORD=root
