--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=postgres
     volumes:
-      - /home/mstojilj/goinfre/ft_transcendence/dbdata:/var/lib/postgresql/data
+      - ./backend/authentication/.dbdata:/var/lib/postgresql/data
     ports:
       - 33066:5432
 
@@ -42,4 +42,6 @@ services:
       - db
     volumes:
       - ./backend/authentication/:/app
+    env_file:
+      - ./backend/authentication/.env.example
 
