--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=postgres
     volumes:
-      - /Users/julzibot/goinfre/ft_transcendence/dbdata:/var/lib/postgresql/data
+      - /Users/miky/42mac/ft_transcendence/.dbdata:/var/lib/postgresql/data
       # - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
     ports:
       - 33066:5432
