--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.3",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
+    "sass": "^1.77.5",
     "socket.io-client": "^4.7.5",
     "three": "^0.161.0"
   },
