--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap-icons": "^1.11.3",
     "react-color": "^2.19.3",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.5",
     "socket.io-client": "^4.7.5",
     "three": "^0.161.0",
