--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-luxon": "^1.3.1",
     "dompurify": "^3.1.5",
+    "luxon": "^3.4.4",
     "nano": "^10.1.3",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
+    "ng-chartjs": "^0.2.8",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.3",
