--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-adapter-moment": "^1.0.1",
     "dompurify": "^3.1.5",
     "luxon": "^3.4.4",
+    "moment": "^2.30.1",
     "nano": "^10.1.3",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
