--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.41",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-adapter-moment": "^1.0.1",
     "dompurify": "^3.1.5",
-    "luxon": "^3.4.4",
+    "luxon": "^1.28.1",
     "moment": "^2.30.1",
     "nano": "^10.1.3",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "ng-chartjs": "^0.2.8",
     "react": "^18",
