--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,9 +35,12 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.161.2",
+    "@types/warning": "^3.0.3",
+    "@types/webxr": "^0.5.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
