--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "vim": "^0.1.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/prop-types": "^15.7.12",
     "@types/react": "^18.3.3",
