improved signin and register pages to be in the layout

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,7 @@
     ".next/types/**/*.ts",
     "src/**/*.js",
     "src/**/*.jsx"
-  ],
+, "src/app/auth/register"  ],
   "exclude": [
     "node_modules"
   ]
