--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - POSTGRES_DB=postgres
     volumes:
       # - /Users/miky/42mac/ft_transcendence/.dbdata:/var/lib/postgresql/data
-      - /Users/julzibot/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
+      - /home/mstojilj/goinfre/.dbdata:/var/lib/postgresql/data
       # - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
     ports:
       - 33066:5432
