Updated code to run UI through HTTPs instead of HTTP.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
-NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://localhost:3000
 NEXTAUTH_SECRET="openssl rand -base64 32"
 FORTY_TWO_CLIENT_ID="42 API ID"
 FORTY_TWO_CLIENT_SECRET="42 API SECRET"
