--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,5 @@
-# NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL=https://localhost:3000
 NEXTAUTH_SECRET="openssl rand -base64 32"
 FORTY_TWO_CLIENT_ID="42 API ID"
 FORTY_TWO_CLIENT_SECRET="42 API SECRET"
-BACKEND_URL=http://backend:8000
+BACKEND_URL=https://backend:8000
