school computer address removed

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
-NEXTAUTH_URL=http://c2r10p1.42nice.fr:3000/
+NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET="openssl rand -base64 32"
 FORTY_TWO_CLIENT_ID="42 API ID"
 FORTY_TWO_CLIENT_SECRET="42 API SECRET"
-BACKEND_URL=http://c2r10p1.42nice.fr:8000
+BACKEND_URL=http://localhost:8000
