--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,15 @@
-DJANGO_SECRET=your_long_secret
-TOKEN_SIGNING_KEY=your_signing_key_without_double_quotes
-
 DJANGO_SUPERUSER_EMAIL=example@example.com
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=root
 
 DB_NAME=postgres
-DB_HOST=database
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=root
 DB_PASSWORD=root
+
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB=postgres
+
+DOMAIN_NAME=localhost
