--- a/backend/proxy/default.conf
+++ b/backend/proxy/default.conf
@@ -1,5 +1,5 @@
 upstream backend{
-  server django:8000;
+  server django:443;
 }
 
 server {
@@ -11,7 +11,7 @@ server {
   ssl_certificate_key /etc/ssl/certs/server_key.pem;
 
   location / {
-    proxy_pass http://backend;
+    proxy_pass https://backend;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,7 +19,11 @@ server {
   }
 
   location /static/ {
-    alias /var/www/html/;
+    alias /var/www/static/;
+  }
+
+  location /media/ {
+  alias /var/www/media/;
   }
 }
 
