--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
   #     context: ./frontend
   #     dockerfile: Dockerfile
   #   restart: always
-  #   depends_on: 
-  #     - backend
+  #   # depends_on: 
+  #   #   - django
   #   ports:
   #     - 3000:3000
   #   volumes: 
@@ -20,6 +20,8 @@ services:
   #     context: ./frontend/ws-server
   #     dockerfile: Dockerfile
   #   restart: always
+  #   depends_on:
+  #     - frontend
   #   ports:
   #     - 6500:6500
   #   volumes:
@@ -45,10 +47,11 @@ services:
     build:
       context: ./backend/core
       dockerfile: Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn --certfile=/etc/ssl/certs/server_cert.pem --keyfile=/etc/ssl/certs/server_key.pem --bind 0.0.0.0:443 core.wsgi:application
+    # command: python manage.py runserver 0.0.0.0:8000
     restart: always
     ports:
-      - 8000:8000
+      - 8000:443
     depends_on:
       - postgres
     volumes:
@@ -57,18 +60,38 @@ services:
     env_file:
       - ./backend/.env.example
 
-  nginx:
-    container_name: nginx
+  backend_proxy:
+    logging:
+      driver: none
+    container_name: backend_proxy
     build:
-      context: ./backend/server
+      context: ./backend/proxy
       dockerfile: Dockerfile
     restart: unless-stopped
     depends_on:
       - django
     ports:
-      - "8080:80"
+      - "8001:80"
       - "4443:443"
     volumes:
-      - ./backend/server/default.conf:/etc/nginx/conf.d/default.conf
-      - ./backend/core/static/:/var/www/html/
-
+      - ./backend/proxy/default.conf:/etc/nginx/conf.d/default.conf
+      - ./backend/core/static/:/var/www/static/
+      - ./backend/core/media/:/var/www/media/
+  
+  # frontend_proxy:
+  #   container_name: frontend_proxy
+  #   build:
+  #     context: ./frontend/proxy
+  #     dockerfile: Dockerfile
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - frontend
+  #   ports:
+  #     - "8081:80"
+  #     - "4444:443"
+  #   logging:
+  #     driver: none
+  #   volumes:
+  #     - ./frontend/proxy/default.conf:/etc/nginx/conf.d/default.conf
+  #     # - ./backend/core/static/:/var/www/static/
+  #     # - ./backend/core/media/:/var/www/media/
