--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 services:
-  # frontend:
-  #   container_name: frontend
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   restart: always
-  #   # depends_on: 
-  #   #   - django
-  #   ports:
-  #     - 3000:3000
-  #   volumes: 
-  #     - ./frontend/:/app
-  #     - /app/node_modules
-  #     - /app/.next
-  
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    restart: always
+    # depends_on: 
+    #   - django
+    ports:
+      - 3000:3000
+    volumes:
+      - ./frontend/:/app
+      - /app/node_modules
+      - /app/.next
+
   # ws-server:
   #   container_name: ws-server
   #   build:
@@ -40,7 +40,6 @@ services:
       - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
     ports:
       - 33066:5432
-
 
   django:
     container_name: django
@@ -77,7 +76,6 @@ services:
       - ./backend/proxy/default.conf:/etc/nginx/conf.d/default.conf
       - ./backend/core/static/:/var/www/static/
       - ./backend/core/media/:/var/www/media/
-  
   # frontend_proxy:
   #   container_name: frontend_proxy
   #   build:
