--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     restart: always
-    # depends_on: 
-    #   - django
-    ports:
-      - 3000:3000
+    depends_on:
+      - django
+    expose:
+      - "3000"
     volumes:
       - ./frontend/:/app
       - /app/node_modules
@@ -39,18 +39,18 @@ services:
       # - /Users/julzibot/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
       - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
     ports:
-      - 33066:5432
+      - 5432:5432
 
   django:
     container_name: django
     build:
       context: ./backend/core
       dockerfile: Dockerfile
-    command: gunicorn --certfile=/etc/ssl/certs/server_cert.pem --keyfile=/etc/ssl/certs/server_key.pem --bind 0.0.0.0:443 core.wsgi:application
-    # command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
+    # command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     restart: always
-    ports:
-      - 8000:443
+    expose:
+      - "8000"
     depends_on:
       - postgres
     volumes:
@@ -59,37 +59,18 @@ services:
     env_file:
       - ./backend/.env.example
 
-  backend_proxy:
-    logging:
-      driver: none
-    container_name: backend_proxy
-    build:
-      context: ./backend/proxy
-      dockerfile: Dockerfile
+  nginx:
+    container_name: proxy
+    image: nginx:1.27.1
     restart: unless-stopped
     depends_on:
       - django
+      - frontend
     ports:
-      - "8001:80"
-      - "4443:443"
+      - "8000:8000"
+      - "3000:3000"
     volumes:
-      - ./backend/proxy/default.conf:/etc/nginx/conf.d/default.conf
+      - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
       - ./backend/core/static/:/var/www/static/
       - ./backend/core/media/:/var/www/media/
-  # frontend_proxy:
-  #   container_name: frontend_proxy
-  #   build:
-  #     context: ./frontend/proxy
-  #     dockerfile: Dockerfile
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - frontend
-  #   ports:
-  #     - "8081:80"
-  #     - "4444:443"
-  #   logging:
-  #     driver: none
-  #   volumes:
-  #     - ./frontend/proxy/default.conf:/etc/nginx/conf.d/default.conf
-  #     # - ./backend/core/static/:/var/www/static/
-  #     # - ./backend/core/media/:/var/www/media/
+      - ./proxy/certs/:/etc/ssl/certs/
