--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,12 @@
     "chart.js": "^4.4.3",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "cookies-next": "^4.2.1",
     "dompurify": "^3.1.5",
+    "express": "^5.0.0",
     "luxon": "^1.28.1",
     "moment": "^2.30.1",
-    "nano": "^10.1.3",
     "next": "^14.2.5",
-    "next-auth": "^4.24.7",
     "ng-chartjs": "^0.2.8",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
@@ -31,9 +31,7 @@
     "react-icons": "^5.2.1",
     "sass": "^1.77.5",
     "socket.io-client": "^4.7.5",
-    "three": "^0.161.0",
-    "vim": "^0.1.0",
-    "express": "^4.17.2"
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
