--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-icons": "^5.2.1",
     "sass": "^1.77.5",
     "socket.io-client": "^4.7.5",
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
