Register is now functionnal

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET="openssl rand -base64 32"
+SESSION_SECRET='openssl rand -base64 32'
 FORTY_TWO_CLIENT_ID="42 API ID"
 FORTY_TWO_CLIENT_SECRET="42 API SECRET"
-BACKEND_URL=http://backend:8000
+NEXT_PUBLIC_API_URL='https://localhost:8000/api'
+NODE_ENV='development'
