--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,42 +10,42 @@
   },
   "dependencies": {
     "@types/chart.js": "^2.9.41",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-adapter-moment": "^1.0.1",
     "cookies-next": "^4.2.1",
-    "dompurify": "^3.1.5",
+    "dompurify": "^3.1.6",
     "express": "^5.0.0",
-    "luxon": "^1.28.1",
+    "luxon": "^3.5.0",
     "moment": "^2.30.1",
-    "next": "^14.2.5",
+    "next": "^14.2.11",
     "ng-chartjs": "^0.2.8",
-    "react": "^18",
-    "react-bootstrap": "^2.10.2",
-    "react-bootstrap-icons": "^1.11.3",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "sass": "^1.77.5",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "sass": "^1.78.0",
     "socket.io-client": "^4.7.5",
-    "three": "^0.161.0",
+    "three": "^0.168.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
-    "@types/node": "^20",
+    "@types/node": "^22.5.5",
     "@types/prop-types": "^15.7.12",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.6",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
-    "@types/three": "^0.161.2",
+    "@types/three": "^0.168.0",
     "@types/warning": "^3.0.3",
-    "@types/webxr": "^0.5.19",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "@types/webxr": "^0.5.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.11",
+    "typescript": "^5.6.2"
   }
 }
