--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - "3000"
     volumes:
       - ./frontend/:/app
-      - /app/node_modules
-      - /app/.next
+      - ./frontend/node_modules:/app/node_modules
+      - ./frontend/.next:/app/.next
+      - certs:/usr/local/share/ca-certificates/
 
   # ws-server:
   #   container_name: ws-server
@@ -38,8 +39,8 @@ services:
       # - /Users/miky/42mac/ft_transcendence/.dbdata:/var/lib/postgresql/data
       # - /Users/julzibot/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
       - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
+    expose:
+      - "5432"
 
   django:
     container_name: django
@@ -47,7 +48,6 @@ services:
       context: ./backend/core
       dockerfile: Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
-    # command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     restart: always
     expose:
       - "8000"
@@ -56,6 +56,7 @@ services:
     volumes:
       - ./backend/core/:/app
       - ./backend/core/static/:/app/static/
+      # - certs:/etc/ssl/certs
     env_file:
       - ./backend/.env.example
 
@@ -73,4 +74,12 @@ services:
       - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
       - ./backend/core/static/:/var/www/static/
       - ./backend/core/media/:/var/www/media/
-      - ./proxy/certs/:/etc/ssl/certs/
+      - certs:/etc/ssl/certs
+
+volumes:
+  certs:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./proxy/certs
+      o: bind
