--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "cookies-next": "^4.2.1",
     "dompurify": "^3.1.6",
     "express": "^5.0.0",
+    "js-cookie": "^3.0.5",
+    "axios": "^0.24.0",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "next": "^14.2.11",
