--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -11,8 +11,8 @@ server {
 	server_name localhost;
 
 	ssl_protocols TLSv1.3 TLSv1.2;
-	ssl_certificate /etc/ssl/certs/localhost+2.pem;
-	ssl_certificate_key /etc/ssl/certs/localhost+2-key.pem;
+	ssl_certificate /etc/ssl/certs/cert.pem;
+	ssl_certificate_key /etc/ssl/certs/key.pem;
 
 
 	location / {
@@ -29,8 +29,8 @@ server {
 	server_name localhost;
 
 	ssl_protocols TLSv1.3 TLSv1.2;
-	ssl_certificate /etc/ssl/certs/localhost+2.pem;
-	ssl_certificate_key /etc/ssl/certs/localhost+2-key.pem;
+	ssl_certificate /etc/ssl/certs/cert.pem;
+	ssl_certificate_key /etc/ssl/certs/key.pem;
 
 
 	location /static {
@@ -43,9 +43,9 @@ server {
 
 	location / {
 		proxy_pass http://backend;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 	}
 }
