--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
       - ./frontend/:/app
       - ./frontend/node_modules:/app/node_modules
       - ./frontend/.next:/app/.next
-      - certs:/usr/local/share/ca-certificates/
 
   # ws-server:
   #   container_name: ws-server
@@ -56,7 +55,6 @@ services:
     volumes:
       - ./backend/core/:/app
       - ./backend/core/static/:/app/static/
-      # - certs:/etc/ssl/certs
     env_file:
       - ./backend/.env.example
 
@@ -74,12 +72,4 @@ services:
       - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
       - ./backend/core/static/:/var/www/static/
       - ./backend/core/media/:/var/www/media/
-      - certs:/etc/ssl/certs
-
-volumes:
-  certs:
-    driver: local
-    driver_opts:
-      type: none
-      device: ./proxy/certs
-      o: bind
+      - ./proxy/certs:/etc/ssl/certs
