Authentication with credentials is now working

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
     "dompurify": "^3.1.6",
     "express": "^5.0.0",
     "js-cookie": "^3.0.5",
-    "axios": "^0.24.0",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "next": "^14.2.11",
@@ -38,6 +37,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.5",
     "@types/prop-types": "^15.7.12",
     "@types/react": "^18.3.6",
