--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -14,6 +14,8 @@ server {
 	ssl_certificate /etc/ssl/certs/cert.pem;
 	ssl_certificate_key /etc/ssl/certs/key.pem;
 
+	client_max_body_size 50M;
+
 
 	location / {
 		proxy_pass http://frontend;
@@ -21,6 +23,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header Cookie $http_cookie;
 	}
 }
 
@@ -32,6 +35,7 @@ server {
 	ssl_certificate /etc/ssl/certs/cert.pem;
 	ssl_certificate_key /etc/ssl/certs/key.pem;
 
+	client_max_body_size 50M;
 
 	location /static {
 		alias /var/www/static;
@@ -47,5 +51,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+				proxy_set_header Cookie $http_cookie;
 	}
 }
