--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -33,8 +33,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/**/*.js",
-    "src/**/*.jsx"
-, "src/app/auth/register"  ],
+    "src/**/*.jsx",
+  ],
   "exclude": [
     "node_modules"
   ]
