--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -6,6 +6,9 @@ upstream backend {
 	server django:8000;
 }
 
+upstream socket {
+	server ws-server:6500;
+}
 server {
 	listen 3000 ssl;
 	server_name localhost;
@@ -19,6 +22,9 @@ server {
 
 	location / {
 		proxy_pass http://frontend;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,15 +48,39 @@ server {
 	}
 
 	location /media {
-		alias /var/www/media;
+			alias /var/www/media;
 	}
 
 	location / {
-		proxy_pass http://backend;
+				proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-				proxy_set_header Cookie $http_cookie;
+				proxy_set_header Cookie $http_cookie
+	}
+}
+
+server {
+	listen 6500 ssl;
+	server_name localhost;
+
+	ssl_protocols TLSv1.3 TLSv1.2;
+	ssl_certificate /etc/ssl/certs/cert.pem;
+	ssl_certificate_key /etc/ssl/certs/key.pem;
+
+	client_max_body_size 50M;
+
+
+	location / {
+		proxy_pass http://socket;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header Cookie $http_cookie;
 	}
 }
