--- a/backend/core/requirements.txt
+++ b/backend/core/requirements.txt
@@ -8,10 +8,12 @@ django-requests==0.0.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+gunicorn==23.0.0
 idna==3.8
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
@@ -23,4 +25,3 @@ rpds-py==0.20.0
 sqlparse==0.5.1
 uritemplate==4.1.1
 urllib3==2.2.2
-gunicorn
