Env var sent to frontend container

--- a/backend/core/Dockerfile
+++ b/backend/core/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12-alpine3.19
+FROM python:3.12-alpine3.19 AS builder
 
 WORKDIR /app
 
@@ -7,18 +7,22 @@ ENV PYTHONDONTWRITEBYTECODE 1
 
 RUN apk update && \
     apk add --no-cache \
-    netcat-openbsd \
     build-base \
     libffi-dev \
     python3-dev \
     gcc \
     musl-dev
 
-RUN rm -rf /var/lib/apt/lists/*
-
-
 RUN pip install --no-cache --upgrade pip
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache -r requirements.txt
+
+FROM python:3.12-alpine3.19
+
+WORKDIR /app
+
+COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 COPY . /app
-ENTRYPOINT [ "sh", "script.sh" ]
+ENTRYPOINT ["sh", "script.sh"]
