--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build  --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -46,8 +46,6 @@
     "@types/three": "^0.168.0",
     "@types/warning": "^3.0.3",
     "@types/webxr": "^0.5.20",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.11",
     "typescript": "5.6.2"
   }
 }
