--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     volumes:
       - ./ws-server/:/server
       - /server/node_modules
+      - ./proxy/certs:/etc/ssl/certs
     environment:
       - SOCKET_PORT=${SOCKET_PORT}
       - DOMAIN_NAME=${DOMAIN_NAME}
@@ -51,9 +52,9 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - /Users/miky/42mac/ft_transcendence/.dbdata:/var/lib/postgresql/data
+      # - /Users/miky/42mac/ft_transcendence/.dbdata:/var/lib/postgresql/data
       # - /Users/julzibot/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
-      # - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
+      - /home/anloisea/goinfre/ft_transcendence/.dbdata:/var/lib/postgresql/data
     expose:
       - ${POSTGRES_PORT}
 
