--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,17 +4,14 @@ COPY package*.json .
 RUN npm install
 COPY . .
 
-FROM node:22-alpine3.18 AS builder
-ENV NODE_ENV=production
-ENV NEXT_PUBLIC_DOMAIN=localhost
-ENV NEXT_PUBLIC_BACKEND_PORT=8000
-WORKDIR /build
-COPY --from=base /app /build
-RUN npm run build
+# FROM node:22-alpine3.18 AS builder
+# ENV NODE_ENV=production
+# ENV NEXT_PUBLIC_DOMAIN=localhost
+# ENV NEXT_PUBLIC_BACKEND_PORT=8000
+# WORKDIR /build
+# COPY --from=base /app /build
+# RUN npm run build
 
-FROM node:22-alpine3.18 AS runner
-ENV NODE_ENV=development
-WORKDIR /app
 FROM node:22-alpine3.18 AS runner
 ENV NODE_ENV=development
 WORKDIR /app
@@ -29,5 +26,4 @@ COPY --from=base /app/node_modules ./node_modules
 COPY --from=base /app/public ./public
 COPY --from=base /app/.next ./.next
 
-CMD ["npm", "run", "dev"]
 CMD ["npm", "run", "dev"]
