--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,23 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_BACKEND_PORT: ${BACKEND_PORT}
+        NEXT_PUBLIC_FRONTEND_PORT: ${FRONTEND_PORT}
+        NEXT_PUBLIC_SOCKET_PORT: ${SOCKET_PORT}
+        NEXT_PUBLIC_SESSION_SECRET: ${NEXT_PUBLIC_SESSION_SECRET}
+        NEXT_PUBLIC_FORTY_TWO_CLIENT_UID: ${NEXT_PUBLIC_FORTY_TWO_CLIENT_UID}
+        NEXT_PUBLIC_FORTY_TWO_CLIENT_SECRET: ${NEXT_PUBLIC_FORTY_TWO_CLIENT_SECRET}
+        NEXT_PUBLIC_API_URL: https://${DOMAIN_NAME}:${BACKEND_PORT}
+        NEXT_PUBLIC_DOMAIN: ${DOMAIN_NAME}
+        NEXT_PUBLIC_URL: https://${DOMAIN_NAME}:${FRONTEND_PORT}
     restart: always
     depends_on:
       - django
     expose:
       - ${FRONTEND_PORT}
     volumes:
-      - ./frontend/:/app
+      - ./frontend:/app
       - /app/node_modules
       - /app/.next
     environment:
@@ -23,6 +33,7 @@ services:
       - NEXT_PUBLIC_API_URL=https://${DOMAIN_NAME}:${BACKEND_PORT}
       - NEXT_PUBLIC_DOMAIN=${DOMAIN_NAME}
       - NEXT_PUBLIC_URL=https://${DOMAIN_NAME}:${FRONTEND_PORT}
+    command: npm start
 
   ws-server:
     container_name: ws-server
