--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "cookies-next": "^4.2.1",
     "dompurify": "^3.1.6",
+    "dotenv": "16.4.5",
     "express": "^5.0.0",
     "js-cookie": "^3.0.5",
     "luxon": "^3.5.0",
