--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,8 @@ COPY package*.json .
 RUN npm install
 COPY . .
 
-# FROM node:22-alpine3.18 AS builder
-# WORKDIR /app
+FROM node:22-alpine3.18 AS builder
+WORKDIR /app
 
 # ARG NEXT_PUBLIC_BACKEND_PORT
 # ARG NEXT_PUBLIC_FRONTEND_PORT
