secured change username

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,17 @@
 DOMAIN_NAME=localhost
-FRONTEND_PORT=3000
-BACKEND_PORT=8000
-SOCKET_PORT=6500
-POSTGRES_PORT=5432
+FRONTEND_PORT=0000
+BACKEND_PORT=0000
+SOCKET_PORT=0000
+POSTGRES_PORT=0000
 
 POSTGRES_DB=postgres
 POSTGRES_HOST=postgres
-POSTGRES_USER=superuser
-POSTGRES_PASSWORD=root
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
 
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_PASSWORD=root
+DJANGO_SUPERUSER_USERNAME=superuser
+DJANGO_SUPERUSER_PASSWORD=password
 DJANGO_SECRET_KEY='django-random-secret-key'
-
-
 
 NEXT_PUBLIC_SESSION_SECRET='random-session-secret-key'
 NEXT_PUBLIC_FORTY_TWO_CLIENT_UID='42-api-client-uid'
