--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - NEXT_PUBLIC_API_URL=https://${DOMAIN_NAME}:${BACKEND_PORT}
       - NEXT_PUBLIC_DOMAIN=${DOMAIN_NAME}
       - NEXT_PUBLIC_URL=https://${DOMAIN_NAME}:${FRONTEND_PORT}
-    command: npm run dev
+    command: npm run start
 
   ws-server:
     container_name: ws-server
